--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   </head>
   <body>
     <h1>Аникина Екатерина</h1>
-    <p>Я живу в Москве и бла бла.</p>
+    <p>Не зайду на кофе.</p>
+    <p>Сам его ты пей.</p>
+    <p>У меня от кофе.</p>
+    <p>Четверо детей.</p>
   </body>
   </html>
