--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <title> крыса</title> 
   </head>
   <body>
     <h1>Аникина Екатерина</h1>
-    <img width="300" src=https://ichef.bbci.co.uk/news/640/cpsprodpb/14236/production/_104368428_gettyimages-543560762.jpg
-    <p>Не зайду на кофе.</p>
-    <p>Сам его ты пей.</p>
-    <p>У меня от кофе.</p>
-    <p>Четверо детей.</p>
+    <img width="300" src=https://obj.mosregtoday.ru/img/articles/items/inline_157743636288109531696.jpg
+    <p>крыса Лулу.</p>
+
+   
   </body>
   </html>
