--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title> крыса</title> 
   </head>
   <body>
-    <h1>Аникина Екатерина</h1>
+    <h1>Лулу</h1>
     <img width="300" src=https://obj.mosregtoday.ru/img/articles/items/inline_157743636288109531696.jpg
-    <p>крыса Лулу.</p>
+    <p>Крыса.</p>
+    <p>Возраст:1год 9месяцев .</p>
 
    
   </body>
