--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   </head>
   <body>
     <h1>Лулу</h1>
+    <h2>Лулу</h2>
+    <h3>Лулу</h3>
+    <h4>Лулу</h4>
+    <h5>Лулу</h5>
+    <h6>Лулу</h6>
     <p>Крыса.</p>
     <p>Возраст:1год 9месяцев .</p>
     <img width="300" src=https://obj.mosregtoday.ru/img/articles/items/inline_157743636288109531696.jpg
