--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h6>Лулу</h6>
     <p>Крыса.</p>
     <p>Возраст:1год 9месяцев .</p>
-    <img width="300" src=https://obj.mosregtoday.ru/img/articles/items/inline_157743636288109531696.jpg
-    <img width="300" src=istockphoto-119523513-1024x1024.jpg
+    <img width="300" src="https://obj.mosregtoday.ru/img/articles/items/inline_157743636288109531696.jpg">
+    <img width="300" src="istockphoto-119523513-1024x1024.jpg">
   </body>
   </html>
