--- a/index.html
+++ b/index.html
@@ -14,5 +14,18 @@
     <p>Возраст:1год 9месяцев .</p>
     <img width="300" src="https://obj.mosregtoday.ru/img/articles/items/inline_157743636288109531696.jpg">
     <img width="300" src="istockphoto-119523513-1024x1024.jpg">
+    </p>
+  <ol>    
+    <li> 1 пункт</li>
+    <li> 2 пункт</li>
+    <li> 3 пункт</li>
+   <ol>
+     <li> 1 пункт</li>
+     <li> 2 пункт</li>
+     <li> 3 пункт</li>
+    </ol>
+  </ol>
+    <p>пример <b>текста</b> вот <i>такой</i> <s>вот</s> <u>интересный</u> <b><s><u><i> непонятный текст</i></u></s></b>.</p>
+    <hr>привет</hr>
   </body>
   </html>
