--- a/index.html
+++ b/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> крыса</title> 
+    <title>домошняя работа</title> 
   </head>
   <body>
-    <h1>Лулу</h1>
-    <h2>Лулу</h2>
-    <h3>Лулу</h3>
-    <h4>Лулу</h4>
-    <h5>Лулу</h5>
-    <h6>Лулу</h6>
-    <p>Крыса.</p>
-    <p>Возраст:1год 9месяцев .</p>
-    <img width="300" src="https://obj.mosregtoday.ru/img/articles/items/inline_157743636288109531696.jpg">
-    <img width="300" src="istockphoto-119523513-1024x1024.jpg">
-    </p>
-<ol>    
-   <li> 1 пункт</li>
-   <li> 2 пункт</li>
-   <li> 3 пункт</li>
-  <ol>
-   <li> 1 пункт</li>
-   <li> 2 пункт</li>
-   <li> 3 пункт</li>
-  </ol>
-</ol>
-  <p>пример <b>текста</b> вот <i>такой</i> <s>вот</s> <u>интересный</u> <b><s><u><i> непонятный текст</i></u></s></b>.</p>
-  <hr>привет</hr>
+  <table border="1" cellpadding="4" cellspacing="0">
+   <tr>
+    <th>Name</th>
+    <th>Subject</th>
+    <th>Parts</th>
+   </tr>
+   <tr>
+    <td rowspan="5">SHIVA</td>
+    <td rowspan="2">Maths</td>
+    <td>A</td>
+   </tr> 
+   <tr>
+    <td>B</td>
+   </tr>
+   <tr>
+    <td rowspan="3">Science</td>
+    <td>A</td>
+   </tr>
+   <tr>
+    <td>B</td>
+   <tr>
+    <td>C</td>
+   </tr>
+   <tr>
+    <td rowspan="5">RAM</td>
+   </tr>
+   <tr>
+    <td rowspan="2">Maths</td>
+    <td>A</td>
+   </tr>
+   <tr>
+    <td>B</td>
+   </tr>
+   <tr>
+    <td rowspan="2">Science</td>
+    <td>A</td>
+   </tr> 
+   <tr>
+    <td>B</td>
+   </tr>
+  </table>  
   </body>
   </html>
