--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>домошняя работа</title> 
   </head>
   <body>
+    <p><a href="2.html">ссылкана вторую страницу</a></p>
   <table border="1" cellpadding="4" cellspacing="0">
    <tr>
     <th>Name</th>
