--- a/2.html
+++ b/2.html
@@ -4,6 +4,7 @@
     <title> Cайт Лулу </title>
   </head>
   <body>
+    <p><a href="index.html">ссылкана первую страницу</a></p>
     <a name="top"></a>
     <a href="#bottom">перейти вниз</a>
     <h1>лулу</h1>
