--- a/2.html
+++ b/2.html
@@ -2,12 +2,35 @@
 <html>
   <head>
     <title> Cайт Лулу </title>
+    <style>
+      h1 {
+  color:red;
+  background-color:blue;
+  margin: 50px;
+  font-size: 50px;
+  font-family: AdvertisementPSCyr;
+  border: 20px solid;
+  text-align: center;
+}
+p {
+  color:#02A299;
+  background-color: #00FF00;
+  padding: 50px
+  
+}
+b {
+  background-color:red;
+  font-family: Arial;
+  border: 20px 
+}
+    </style>
   </head>
   <body>
     <p><a href="index.html">ссылкана первую страницу</a></p>
     <a name="top"></a>
     <a href="#bottom">перейти вниз</a>
-    <h1>лулу</h1>
+    <h1 style="color: red;">лулу</h1>
+    <h2> 
     <p>сайт школы:<a href="https://sch1532uz.mskobr.ru/priem-v-shkolu/buduschim-pervoklassnikam">sch1532uz.mskobr.ru</a></p>
     <p>сайт про лишайники:<a href="https://ru.wikipedia.org/wiki/%D0%9B%D0%B8%D1%88%D0%B0%D0%B9%D0%BD%D0%B8%D0%BA%D0%B8">wikipedia.org</a></p>
     <p>сайт школы:<a target="_blank" href="https://sch1532uz.mskobr.ru/priem-v-shkolu/buduschim-pervoklassnikam">sch1532uz.mskobr.ru</a></p>
